--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,7 +21,7 @@ body {
   font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
   Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  color: rgba(0,0,0,0.7);
+  color: rgba(0, 0, 0, 0.7);
   padding-top: var(--header-height);
 }
 
@@ -51,4 +51,20 @@ b,
 strong,
 label {
   font-weight: normal;
+}
+
+.icon-sm {
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
+}
+.icon-md {
+  width: 20px;
+  height: 20px;
+
+}
+.icon-bg {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
 }
