--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -19,10 +21,8 @@ html {
 body {
   font-size: 1rem;
   font-weight: normal;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-  Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  color: rgba(0, 0, 0, 0.7);
-  padding-top: var(--header-height);
+  font-family: 'Nunito', sans-serif;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 a {
@@ -36,10 +36,7 @@ button {
   font-size: 1rem;
 }
 
-img {
-  max-width: 100%;
-  vertical-align: middle;
-}
+
 
 h1,
 h2,
@@ -58,11 +55,13 @@ label {
   height: 18px;
   margin-right: 5px;
 }
+
 .icon-md {
   width: 20px;
   height: 20px;
 
 }
+
 .icon-bg {
   width: 30px;
   height: 30px;
